lab5/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab5
  labels:
    name: lab5
